# portuguese-pos-dict

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  build-lt.sh  build-morfologik-lt.sh  build-spelling-dicts.sh  commit.sh  extract-new.sh  make-test-lt-fdic.sh  pyproject.toml  test-noob.txt
.github/ISSUE_TEMPLATE/: bug_report.md  (+4 more)
data/: 1945 vs. 1990 changes (pt-PT).tsv  README.md  three-way-alternations.txt  two-way-alternations.txt
diccionari-arrel/: adv_mente-lt.txt  adverbis-lt.txt  descartats
fdic-to-lt/: conjuga-verbs.pl  flexiona.pl
libs/: Flexio.pm
lt-to-fdic/: extrau-verbs-i-models.pl  lt-to-fdic-old.pl  lt-to-fdic.pl  nom_models_verbals.txt  ordena-tags.pl  sort-tags.pl  verbal_tags.txt  verbal_tags_sorted.txt
morfologik-lt/: added-tagger.head  extract-new.sh  extrau-novetats.sh  filter-archaic.txt  removed-tagger.head
pos_tagger_scripts/: README.md  build-lt.sh  prepare.sh
pt_dict/: README.md  console_utils.py  constants.py  logger.py  utils.py
scripts/: check_encoding.sh  check_newlines.sh
spelling-dict/: pt_AO.info
src-dict/: adjectius-fdic.txt  adjectives-fdic.txt  adv_mente-lt.txt  adverbs-lt.txt  discarded.txt  noms-fdic.txt  nouns-fdic.txt  propernouns-lt.txt  reescriu-noms.pl  resta-lt.txt  rewrite-adj.pl  verbs-fdic.txt
test/: test_alternation.py  test_syllabifier.py
test-lt-fdic-lt/: separa-reordena-lt.pl
variants/: alternation.py  br-pt_excluding.txt  br-pt_recommend-BR.txt  br-pt_uncertain.txt  extract-variants.pl  extract_variants.py  phonology.py  pt_br_others.txt  syllabifier.py
varieties/: br-pt_uncertain.txt
(+834 files in other folders)
